--- a/styles/style.css
+++ b/styles/style.css
@@ -144,3 +144,17 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden; }
+
+html {
+  font-size: 125%; }
+
+ul {
+  margin: 0;
+  padding: 0; }
+
+li {
+  list-style-type: none; }
+
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto; }
