--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,22 +1,60 @@
 header {
     .wrapper {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
+        padding-top: 20px;
         .instructionsMenuIcon {
             display: block;
-            font-size: 1.4rem;
-            padding: 0;
+            font-size: 1.6rem;
+            padding: 0 5px;
             border: none;
+            flex: 0 1 auto;
+            background: none;
+            transition: color 0.5s ease-out;
+            z-index: 20;
         }
-        .instructionsMenu {
-            display: none;
+        .fa-times {
+            color: $accentColour;
+            transition: color 0.3s ease-out;
+        }
+        .fa-times:hover {
+            color: $secondaryColour;
+        }
+        .instructionsMenuIcon:hover {
+            color: $accentColour;
         }
         h1 {
+            font-size: 2.3rem;
+            border: 1px solid tomato;
             text-align: center;
             text-transform: capitalize;
             margin: 0;
             flex: 2 auto;
         }
+    }
+    .instructionsMenu {
+        display: none;
+        color: $accentColour;
+        padding: 0 100px;
+        h2 {
+            text-align: center;
+        }
+        p:first-letter {
+            text-transform: capitalize;
+        }
+        .steps {
+            text-align: left;
+        }
+    }
+    .showInstructionsMenu {
+        z-index: 10;
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0,0,0,0.9);
     }
     
 }
