--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,3 +1,4 @@
+// Footer content styles starts here
 footer {
     background: $quaternaryColour;
     position: absolute;
@@ -6,8 +7,10 @@ footer {
     right: 0;
     p {
         text-transform: capitalize;
+        font-size: 0.8rem;
         text-align: center;
         margin: 5px 0;
         color: $accentColour;
     }
 }
+// Footer content styles ends here
