--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,3 +1,4 @@
+// Header content styles starts here
 header {
     .wrapper {
         display: flex;
@@ -35,14 +36,24 @@ header {
     .instructionsMenu {
         display: none;
         color: $accentColour;
-        padding: 0 100px;
+        padding: 0 15%;
         h2 {
+            text-align: center;
+            font-size: 2.1rem;
+        }
+        p {
+            font-size: 1.1rem;
+        }
+        p:nth-of-type(1) {
             text-align: center;
         }
         p:first-letter {
             text-transform: capitalize;
         }
         .steps {
+            margin-top: 50px;
+        }
+        .steps p{
             text-align: left;
         }
     }
@@ -58,3 +69,4 @@ header {
     }
     
 }
+// Header content styles ends here
