added media queries to home page :smiley_cat:

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -11,6 +11,9 @@ footer {
         text-align: center;
         margin: 5px 0;
         color: $accentColour;
+        @media (max-width: 520px) {
+            font-size: 0.7rem;
+        }
     }
 }
 // Footer content styles ends here
