--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -13,16 +13,23 @@ header {
             background: none;
             transition: color 0.5s ease-out;
             z-index: 20;
+            &:hover {
+                color: $accentColour;
+            }
         }
         .fa-times {
             color: $accentColour;
             transition: color 0.3s ease-out;
-        }
-        .fa-times:hover {
-            color: $secondaryColour;
-        }
-        .instructionsMenuIcon:hover {
-            color: $accentColour;
+            padding: 3px;
+            &:hover {
+                color: $secondaryColour;
+            }
+            @media (max-width: 1280px) {
+                margin-right: 15px;
+            }
+            @media (max-width: 525px) {
+                margin-right: 0;
+            }
         }
         h1 {
             font-size: 2.3rem;
@@ -31,6 +38,15 @@ header {
             text-transform: capitalize;
             margin: 0;
             flex: 2 auto;
+            @media (max-width: 605px) {
+                font-size: 1.8rem;
+            }
+            @media (max-width: 520px) {
+                font-size: 1.5rem;
+            }
+            @media (max-width: 350px) {
+                font-size: 1.3rem;
+            }
         }
     }
     .instructionsMenu {
@@ -40,21 +56,34 @@ header {
         h2 {
             text-align: center;
             font-size: 2.1rem;
-        }
-        p {
-            font-size: 1.1rem;
-        }
-        p:nth-of-type(1) {
-            text-align: center;
-        }
-        p:first-letter {
-            text-transform: capitalize;
+            @media (max-width: 605px) {
+                font-size: 1.8rem;
+            }
+            @media (max-width: 420px) {
+                font-size: 1.4rem;
+            }
         }
         .steps {
             margin-top: 50px;
+            @media (max-width: 570px) {
+                margin-top: 25px;
+            }
         }
         .steps p{
             text-align: left;
+            font-size: 1.1rem;
+            @media (max-width: 690px) {
+                font-size: 0.9rem;
+            }
+            @media (max-width: 420px) {
+                font-size: 0.8rem;
+            }
+            @media (max-width: 330px) {
+                font-size: 0.7rem;
+            }
+            &:first-letter {
+                text-transform: capitalize;
+            }
         }
     }
     .showInstructionsMenu {
