added javascript to play buttons :trollface:

--- a/styles/partials/_colours.scss
+++ b/styles/partials/_colours.scss
@@ -2,6 +2,6 @@
 $primaryColour: #070707;
 $secondaryColour: #690500;
 $tertiaryColour: #47682C;
-$quaternaryColour: #452103;
+$quaternaryColour: #49270c;
 $quinaryColour: #171A21;
 $accentColour: #FFFFFF;
