--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,5 +1,6 @@
 // Footer content styles starts here
 footer {
+    border-top: 2px solid $primaryColour;
     background: $quaternaryColour;
     position: absolute;
     bottom: 0;
