--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -3,7 +3,6 @@ html {
     font-size: 125%
 }
 body {
-    font-family: 'Space Mono', monospace;
     background: $tertiaryColour;
 }
 ol,
@@ -17,6 +16,8 @@ ul li {
 .wrapper {
     max-width: 1280px;
     margin: 0 auto;
-    border: 1px solid tomato;
+}
+* {
+    border: 1px solid dodgerblue;
 }
 // Global content styles ends here
