--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,5 +1,6 @@
 // Header content styles starts here
 header {
+    font-family: 'Space Mono', monospace;
     .wrapper {
         display: flex;
         align-items: center;
@@ -33,7 +34,6 @@ header {
         }
         h1 {
             font-size: 2.3rem;
-            border: 1px solid tomato;
             text-align: center;
             text-transform: capitalize;
             margin: 0;
@@ -72,6 +72,7 @@ header {
         .steps p{
             text-align: left;
             font-size: 1.1rem;
+            margin-top: 0;
             @media (max-width: 690px) {
                 font-size: 0.9rem;
             }
