--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,15 +1,13 @@
 // Main content styles starts here
 main {
     .diceGrid {
-        min-height: 300px;
-        padding: 100px 0;
+        min-height: 280px;
+        padding: 50px 0;
+        margin: 0 15%;
         display: grid;
-        grid-template-columns: repeat(10, 1fr);
-        grid-auto-rows: 70px;
-        grid-gap: 20px;
-        li {
-            grid-column: 2;
-        }
+        grid-template-columns: repeat(auto-fill, 125px);
+        grid-auto-rows: 125px;
+        grid-gap: 15px;
     }
 
     .dice {
@@ -18,18 +16,12 @@ main {
         background: $secondaryColour;
         width: 120px;
         height: 120px;
+        padding-bottom: 100px;
+        position: relative;
         @media (max-width: 920px) {
             width: 100px;
             height: 100px;
         }
-    }
-    .diceFace1,
-    .diceFace2,
-    .diceFace3,
-    .diceFace4,
-    .diceFace5,
-    .diceFace6 {
-        position: relative;
     }
     .dot1,
     .dot2,
@@ -245,6 +237,14 @@ main {
             &:hover {
                 color: $secondaryColour;
             }
+        }
+    }
+    .userScoreIndicator {
+        min-height: 75px;
+        p {
+            text-align: center;
+            font-family: 'Space Mono', monospace;
+            font-size: 1.2rem;
         }
     }
 }
