--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,6 @@ html {
   font-size: 125%; }
 
 body {
-  font-family: 'Space Mono', monospace;
   background: #47682C; }
 
 ol,
@@ -162,139 +161,132 @@ ul li {
 
 .wrapper {
   max-width: 1280px;
-  margin: 0 auto;
-  border: 1px solid tomato; }
+  margin: 0 auto; }
 
-header .wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 20px; }
-  header .wrapper .instructionsMenuIcon {
-    display: block;
-    font-size: 1.6rem;
-    padding: 0 5px;
-    border: none;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 1 auto;
-    flex: 0 1 auto;
-    background: none;
-    -webkit-transition: color 0.5s ease-out;
-    -o-transition: color 0.5s ease-out;
-    transition: color 0.5s ease-out;
-    z-index: 20; }
-    header .wrapper .instructionsMenuIcon:hover {
-      color: #FFFFFF; }
-  header .wrapper .fa-times {
+* {
+  border: 1px solid dodgerblue; }
+
+header {
+  font-family: 'Space Mono', monospace; }
+  header .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-top: 20px; }
+    header .wrapper .instructionsMenuIcon {
+      display: block;
+      font-size: 1.6rem;
+      padding: 0 5px;
+      border: none;
+      -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      background: none;
+      -webkit-transition: color 0.5s ease-out;
+      -o-transition: color 0.5s ease-out;
+      transition: color 0.5s ease-out;
+      z-index: 20; }
+      header .wrapper .instructionsMenuIcon:hover {
+        color: #FFFFFF; }
+    header .wrapper .fa-times {
+      color: #FFFFFF;
+      -webkit-transition: color 0.3s ease-out;
+      -o-transition: color 0.3s ease-out;
+      transition: color 0.3s ease-out;
+      padding: 3px; }
+      header .wrapper .fa-times:hover {
+        color: #690500; }
+      @media (max-width: 1280px) {
+        header .wrapper .fa-times {
+          margin-right: 15px; } }
+      @media (max-width: 525px) {
+        header .wrapper .fa-times {
+          margin-right: 0; } }
+    header .wrapper h1 {
+      font-size: 2.3rem;
+      text-align: center;
+      text-transform: capitalize;
+      margin: 0;
+      -webkit-box-flex: 2;
+      -ms-flex: 2 auto;
+      flex: 2 auto; }
+      @media (max-width: 605px) {
+        header .wrapper h1 {
+          font-size: 1.8rem; } }
+      @media (max-width: 520px) {
+        header .wrapper h1 {
+          font-size: 1.5rem; } }
+      @media (max-width: 350px) {
+        header .wrapper h1 {
+          font-size: 1.3rem; } }
+  header .instructionsMenu {
+    display: none;
     color: #FFFFFF;
-    -webkit-transition: color 0.3s ease-out;
-    -o-transition: color 0.3s ease-out;
-    transition: color 0.3s ease-out;
-    padding: 3px; }
-    header .wrapper .fa-times:hover {
-      color: #690500; }
-    @media (max-width: 1280px) {
-      header .wrapper .fa-times {
-        margin-right: 15px; } }
-    @media (max-width: 525px) {
-      header .wrapper .fa-times {
-        margin-right: 0; } }
-  header .wrapper h1 {
-    font-size: 2.3rem;
-    border: 1px solid tomato;
-    text-align: center;
-    text-transform: capitalize;
-    margin: 0;
-    -webkit-box-flex: 2;
-    -ms-flex: 2 auto;
-    flex: 2 auto; }
-    @media (max-width: 605px) {
-      header .wrapper h1 {
-        font-size: 1.8rem; } }
-    @media (max-width: 520px) {
-      header .wrapper h1 {
-        font-size: 1.5rem; } }
-    @media (max-width: 350px) {
-      header .wrapper h1 {
-        font-size: 1.3rem; } }
-
-header .instructionsMenu {
-  display: none;
-  color: #FFFFFF;
-  padding: 0 15%; }
-  header .instructionsMenu h2 {
-    text-align: center;
-    font-size: 2.1rem; }
-    @media (max-width: 605px) {
-      header .instructionsMenu h2 {
-        font-size: 1.8rem; } }
-    @media (max-width: 420px) {
-      header .instructionsMenu h2 {
-        font-size: 1.4rem; } }
-  header .instructionsMenu .steps {
-    margin-top: 50px; }
-    @media (max-width: 570px) {
-      header .instructionsMenu .steps {
-        margin-top: 25px; } }
-  header .instructionsMenu .steps p {
-    text-align: left;
-    font-size: 1.1rem; }
-    @media (max-width: 690px) {
-      header .instructionsMenu .steps p {
-        font-size: 0.9rem; } }
-    @media (max-width: 420px) {
-      header .instructionsMenu .steps p {
-        font-size: 0.8rem; } }
-    @media (max-width: 330px) {
-      header .instructionsMenu .steps p {
-        font-size: 0.7rem; } }
-    header .instructionsMenu .steps p:first-letter {
-      text-transform: capitalize; }
-
-header .showInstructionsMenu {
-  z-index: 10;
-  display: block;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.9); }
+    padding: 0 15%; }
+    header .instructionsMenu h2 {
+      text-align: center;
+      font-size: 2.1rem; }
+      @media (max-width: 605px) {
+        header .instructionsMenu h2 {
+          font-size: 1.8rem; } }
+      @media (max-width: 420px) {
+        header .instructionsMenu h2 {
+          font-size: 1.4rem; } }
+    header .instructionsMenu .steps {
+      margin-top: 50px; }
+      @media (max-width: 570px) {
+        header .instructionsMenu .steps {
+          margin-top: 25px; } }
+    header .instructionsMenu .steps p {
+      text-align: left;
+      font-size: 1.1rem;
+      margin-top: 0; }
+      @media (max-width: 690px) {
+        header .instructionsMenu .steps p {
+          font-size: 0.9rem; } }
+      @media (max-width: 420px) {
+        header .instructionsMenu .steps p {
+          font-size: 0.8rem; } }
+      @media (max-width: 330px) {
+        header .instructionsMenu .steps p {
+          font-size: 0.7rem; } }
+      header .instructionsMenu .steps p:first-letter {
+        text-transform: capitalize; }
+  header .showInstructionsMenu {
+    z-index: 10;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.9); }
 
 main .diceGrid {
-  min-height: 300px;
-  padding: 100px 0;
+  min-height: 280px;
+  padding: 50px 0;
+  margin: 0 15%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[10];
-  grid-template-columns: repeat(10, 1fr);
-  grid-auto-rows: 70px;
-  grid-gap: 20px; }
-  main .diceGrid li {
-    -ms-grid-column: 2;
-    grid-column: 2; }
+  grid-template-columns: repeat(auto-fill, 125px);
+  grid-auto-rows: 125px;
+  grid-gap: 15px; }
 
 main .dice {
   border: 1px solid #070707;
   border-radius: 10px;
   background: #690500;
   width: 120px;
-  height: 120px; }
+  height: 120px;
+  padding-bottom: 100px;
+  position: relative; }
   @media (max-width: 920px) {
     main .dice {
       width: 100px;
       height: 100px; } }
-
-main .diceFace1,
-main .diceFace2,
-main .diceFace3,
-main .diceFace4,
-main .diceFace5,
-main .diceFace6 {
-  position: relative; }
 
 main .dot1,
 main .dot2,
@@ -572,8 +564,16 @@ main .playButtons {
     main .playButtons .stay:hover {
       color: #690500; }
 
+main .userScoreIndicator {
+  min-height: 75px; }
+  main .userScoreIndicator p {
+    text-align: center;
+    font-family: 'Space Mono', monospace;
+    font-size: 1.2rem; }
+
 footer {
-  background: #452103;
+  border-top: 2px solid #070707;
+  background: #49270c;
   position: absolute;
   bottom: 0;
   left: 0;
