--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,13 +1,13 @@
 // Main content styles starts here
 main {
     .diceGrid {
-        min-height: 280px;
+        min-height: 360px;
         padding: 50px 0;
         margin: 0 15%;
         display: grid;
         grid-template-columns: repeat(auto-fill, 125px);
         grid-auto-rows: 125px;
-        grid-gap: 15px;
+        grid-gap: 3%;
     }
 
     .dice {
@@ -187,7 +187,7 @@ main {
             letter-spacing: 2px;
             background: $quinaryColour;
             color: $accentColour;
-            border: none;
+            border: 1px solid $primaryColour;
             font-size: 1.2rem;
             font-family: 'Wallpoet', cursive;
             transition: color 0.3s ease-out, box-shadow 0.5s ease-in-out, text-shadow 0.8s ease-in;
@@ -197,6 +197,7 @@ main {
             &:hover {
                 box-shadow: 0 5px 5px $primaryColour;
                 text-shadow: 1px 1px 1px $accentColour;
+                color: $secondaryColour;
             }
         }
         .rollNewDice {
@@ -217,7 +218,7 @@ main {
                 grid-column: 3 / span 8;
             }
             &:hover {
-                color: $tertiaryColour;
+                cursor: url(../assets/diceCursor.png), auto;
             }
         }
         .stay {
@@ -234,14 +235,12 @@ main {
             @media (max-width: 330px) {
                 grid-column: 3 / span 8;
             }
-            &:hover {
-                color: $secondaryColour;
-            }
         }
     }
     .userScoreIndicator {
-        min-height: 75px;
+        min-height: 80px;
         p {
+            margin-top: 0;
             text-align: center;
             font-family: 'Space Mono', monospace;
             font-size: 1.2rem;
