--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -18,6 +18,6 @@ ul li {
     margin: 0 auto;
 }
 * {
-    // border: 1px solid dodgerblue;
+    border: 1px solid dodgerblue;
 }
 // Global content styles ends here
