--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -2,12 +2,12 @@
 main {
     .diceGrid {
         min-height: 360px;
-        padding: 50px 0;
-        margin: 0 15%;
         display: grid;
-        grid-template-columns: repeat(auto-fill, 125px);
-        grid-auto-rows: 125px;
-        grid-gap: 3%;
+        justify-items: center;
+        align-items: center;
+        margin: 0 15%;
+        grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+        grid-template-rows: auto;
     }
 
     .dice {
@@ -16,11 +16,14 @@ main {
         background: $secondaryColour;
         width: 120px;
         height: 120px;
-        padding-bottom: 100px;
         position: relative;
-        @media (max-width: 920px) {
+        @media (max-width: 990px) {
             width: 100px;
             height: 100px;
+        }
+        @media (max-width: 480px) {
+            width: 90px;
+            height: 90px;
         }
     }
     .dot1,
@@ -34,9 +37,13 @@ main {
         width: 25px;
         height: 25px;
         position: absolute;
-        @media (max-width: 920px) {
+        @media (max-width: 990px) {
             width: 20px;
             height: 20px;
+        }
+        @media (max-width: 480px) {
+            width: 15px;
+            height: 15px;
         }
     }
     .diceFace1 {
@@ -44,10 +51,6 @@ main {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            @media (max-width: 920px) {
-                width: 20px;
-                height: 20px;
-            }
         }
     }
     .diceFace2 {
@@ -180,7 +183,10 @@ main {
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-auto-rows: 70px;
-        grid-gap: 20px;
+        grid-gap: 1%;
+        @media (max-width: 470px) {
+            grid-gap: 5%;
+        }
         .rollNewDice,
         .stay {
             text-transform: uppercase;
@@ -202,19 +208,19 @@ main {
         }
         .rollNewDice {
             grid-column: 4 / span 3;
-            @media (max-width: 1110px) {
+            @media (max-width: 1135px) {
                 grid-column: 3 / span 4;
             }
-            @media (max-width: 826px) {
+            @media (max-width: 840px) {
                 grid-column: 2 / span 5;
             }
-            @media (max-width: 656px) {
+            @media (max-width: 680px) {
                 grid-column: 2 / span 6;
             }
             @media (max-width: 470px) {
                 grid-column: 4 / span 6;
             }
-            @media (max-width: 330px) {
+            @media (max-width: 338px) {
                 grid-column: 3 / span 8;
             }
             &:hover {
@@ -226,24 +232,33 @@ main {
             @media (max-width: 1110px) {
                 grid-column: 7 / span 4;
             }
-            @media (max-width: 656px) {
+            @media (max-width: 680px) {
                 grid-column: 8 / span 4;
             }
             @media (max-width: 470px) {
                 grid-column: 4 / span 6;
             }
-            @media (max-width: 330px) {
+            @media (max-width: 338px) {
                 grid-column: 3 / span 8;
             }
         }
     }
     .userScoreIndicator {
         min-height: 80px;
+        @media (max-width: 580px) {
+            min-height: 60px;
+        }
+        @media (max-width: 470px) {
+            min-height: 50px;
+        }
         p {
             margin-top: 0;
             text-align: center;
             font-family: 'Space Mono', monospace;
             font-size: 1.2rem;
+            @media (max-width: 605px) {
+                font-size: 0.9rem;
+            }
         }
     }
 }
