--- a/styles/style.css
+++ b/styles/style.css
@@ -163,6 +163,9 @@ ul li {
   max-width: 1280px;
   margin: 0 auto; }
 
+* {
+  border: 1px solid dodgerblue; }
+
 header {
   font-family: 'Space Mono', monospace; }
   header .wrapper {
@@ -264,13 +267,16 @@ header {
 
 main .diceGrid {
   min-height: 360px;
-  padding: 50px 0;
-  margin: 0 15%;
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 125px);
-  grid-auto-rows: 125px;
-  grid-gap: 3%; }
+  justify-items: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 0 15%;
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  -ms-grid-rows: auto;
+  grid-template-rows: auto; }
 
 main .dice {
   border: 1px solid #070707;
@@ -278,12 +284,15 @@ main .dice {
   background: #690500;
   width: 120px;
   height: 120px;
-  padding-bottom: 100px;
   position: relative; }
-  @media (max-width: 920px) {
+  @media (max-width: 990px) {
     main .dice {
       width: 100px;
       height: 100px; } }
+  @media (max-width: 480px) {
+    main .dice {
+      width: 90px;
+      height: 90px; } }
 
 main .dot1,
 main .dot2,
@@ -296,7 +305,7 @@ main .dot6 {
   width: 25px;
   height: 25px;
   position: absolute; }
-  @media (max-width: 920px) {
+  @media (max-width: 990px) {
     main .dot1,
     main .dot2,
     main .dot3,
@@ -305,6 +314,15 @@ main .dot6 {
     main .dot6 {
       width: 20px;
       height: 20px; } }
+  @media (max-width: 480px) {
+    main .dot1,
+    main .dot2,
+    main .dot3,
+    main .dot4,
+    main .dot5,
+    main .dot6 {
+      width: 15px;
+      height: 15px; } }
 
 main .diceFace1 .dot1 {
   top: 50%;
@@ -312,10 +330,6 @@ main .diceFace1 .dot1 {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); }
-  @media (max-width: 920px) {
-    main .diceFace1 .dot1 {
-      width: 20px;
-      height: 20px; } }
 
 main .diceFace2 .dot1 {
   top: 15%;
@@ -479,7 +493,10 @@ main .playButtons {
   -ms-grid-columns: (1fr)[12];
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: 70px;
-  grid-gap: 20px; }
+  grid-gap: 1%; }
+  @media (max-width: 470px) {
+    main .playButtons {
+      grid-gap: 5%; } }
   main .playButtons .rollNewDice,
   main .playButtons .stay {
     text-transform: uppercase;
@@ -508,17 +525,17 @@ main .playButtons {
     -ms-grid-column: 4;
     -ms-grid-column-span: 3;
     grid-column: 4 / span 3; }
-    @media (max-width: 1110px) {
+    @media (max-width: 1135px) {
       main .playButtons .rollNewDice {
         -ms-grid-column: 3;
         -ms-grid-column-span: 4;
         grid-column: 3 / span 4; } }
-    @media (max-width: 826px) {
+    @media (max-width: 840px) {
       main .playButtons .rollNewDice {
         -ms-grid-column: 2;
         -ms-grid-column-span: 5;
         grid-column: 2 / span 5; } }
-    @media (max-width: 656px) {
+    @media (max-width: 680px) {
       main .playButtons .rollNewDice {
         -ms-grid-column: 2;
         -ms-grid-column-span: 6;
@@ -528,7 +545,7 @@ main .playButtons {
         -ms-grid-column: 4;
         -ms-grid-column-span: 6;
         grid-column: 4 / span 6; } }
-    @media (max-width: 330px) {
+    @media (max-width: 338px) {
       main .playButtons .rollNewDice {
         -ms-grid-column: 3;
         -ms-grid-column-span: 8;
@@ -544,7 +561,7 @@ main .playButtons {
         -ms-grid-column: 7;
         -ms-grid-column-span: 4;
         grid-column: 7 / span 4; } }
-    @media (max-width: 656px) {
+    @media (max-width: 680px) {
       main .playButtons .stay {
         -ms-grid-column: 8;
         -ms-grid-column-span: 4;
@@ -554,7 +571,7 @@ main .playButtons {
         -ms-grid-column: 4;
         -ms-grid-column-span: 6;
         grid-column: 4 / span 6; } }
-    @media (max-width: 330px) {
+    @media (max-width: 338px) {
       main .playButtons .stay {
         -ms-grid-column: 3;
         -ms-grid-column-span: 8;
@@ -562,11 +579,20 @@ main .playButtons {
 
 main .userScoreIndicator {
   min-height: 80px; }
+  @media (max-width: 580px) {
+    main .userScoreIndicator {
+      min-height: 60px; } }
+  @media (max-width: 470px) {
+    main .userScoreIndicator {
+      min-height: 50px; } }
   main .userScoreIndicator p {
     margin-top: 0;
     text-align: center;
     font-family: 'Space Mono', monospace;
     font-size: 1.2rem; }
+    @media (max-width: 605px) {
+      main .userScoreIndicator p {
+        font-size: 0.9rem; } }
 
 footer {
   border-top: 2px solid #070707;
