--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -10,6 +10,9 @@ ul {
     margin: 0;
     padding: 0;
 }
+p {
+    font-family: 'Space Mono', monospace;
+}
 ul li {
     list-style-type: none;
 }
@@ -18,6 +21,6 @@ ul li {
     margin: 0 auto;
 }
 * {
-    border: 1px solid dodgerblue;
+    // border: 1px solid dodgerblue;
 }
 // Global content styles ends here
