--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,9 @@ ul {
   margin: 0;
   padding: 0; }
 
+p {
+  font-family: 'Space Mono', monospace; }
+
 ul li {
   list-style-type: none; }
 
@@ -163,107 +166,135 @@ ul li {
   max-width: 1280px;
   margin: 0 auto; }
 
-* {
-  border: 1px solid dodgerblue; }
-
-header {
-  font-family: 'Space Mono', monospace; }
-  header .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding-top: 20px; }
-    header .wrapper .instructionsMenuIcon {
-      display: block;
-      font-size: 1.6rem;
-      padding: 0 5px;
-      border: none;
-      -webkit-box-flex: 0;
-      -ms-flex: 0 1 auto;
-      flex: 0 1 auto;
-      background: none;
-      -webkit-transition: color 0.5s ease-out;
-      -o-transition: color 0.5s ease-out;
-      transition: color 0.5s ease-out;
-      z-index: 20; }
-      header .wrapper .instructionsMenuIcon:hover {
-        color: #FFFFFF; }
-    header .wrapper .fa-times {
-      color: #FFFFFF;
-      -webkit-transition: color 0.3s ease-out;
-      -o-transition: color 0.3s ease-out;
-      transition: color 0.3s ease-out;
-      padding: 3px; }
-      header .wrapper .fa-times:hover {
-        color: #690500; }
-      @media (max-width: 1280px) {
-        header .wrapper .fa-times {
-          margin-right: 15px; } }
-      @media (max-width: 525px) {
-        header .wrapper .fa-times {
-          margin-right: 0; } }
-    header .wrapper h1 {
-      font-size: 2.3rem;
-      text-align: center;
-      text-transform: capitalize;
-      margin: 0;
-      -webkit-box-flex: 2;
-      -ms-flex: 2 auto;
-      flex: 2 auto; }
-      @media (max-width: 605px) {
-        header .wrapper h1 {
-          font-size: 1.8rem; } }
-      @media (max-width: 520px) {
-        header .wrapper h1 {
-          font-size: 1.5rem; } }
-      @media (max-width: 350px) {
-        header .wrapper h1 {
-          font-size: 1.3rem; } }
-  header .instructionsMenu {
-    display: none;
-    color: #FFFFFF;
-    padding: 0 15%; }
-    header .instructionsMenu h2 {
-      text-align: center;
-      font-size: 2.1rem; }
-      @media (max-width: 605px) {
-        header .instructionsMenu h2 {
-          font-size: 1.8rem; } }
-      @media (max-width: 420px) {
-        header .instructionsMenu h2 {
-          font-size: 1.4rem; } }
-    header .instructionsMenu .steps {
-      margin-top: 50px; }
-      @media (max-width: 570px) {
-        header .instructionsMenu .steps {
-          margin-top: 25px; } }
-    header .instructionsMenu .steps p {
-      text-align: left;
-      font-size: 1.1rem;
-      margin-top: 0; }
-      @media (max-width: 690px) {
-        header .instructionsMenu .steps p {
-          font-size: 0.9rem; } }
-      @media (max-width: 420px) {
-        header .instructionsMenu .steps p {
-          font-size: 0.8rem; } }
-      @media (max-width: 330px) {
-        header .instructionsMenu .steps p {
-          font-size: 0.7rem; } }
-      header .instructionsMenu .steps p:first-letter {
-        text-transform: capitalize; }
-  header .showInstructionsMenu {
-    z-index: 10;
+header .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 20px; }
+  header .wrapper h1 {
+    font-size: 2.3rem;
+    text-align: center;
+    text-transform: capitalize;
+    font-family: "wallpoet", cursive;
+    margin: 0;
+    -webkit-box-flex: 2;
+    -ms-flex: 2 auto;
+    flex: 2 auto; }
+    @media (max-width: 605px) {
+      header .wrapper h1 {
+        font-size: 1.8rem; } }
+    @media (max-width: 520px) {
+      header .wrapper h1 {
+        font-size: 1.5rem; } }
+    @media (max-width: 355px) {
+      header .wrapper h1 {
+        font-size: 1.3rem; } }
+  header .wrapper .fa-dice {
+    color: #690500;
+    -webkit-animation: swing;
+    animation: swing;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite; }
+    @media (prefers-reduced-motion: reduce) {
+      header .wrapper .fa-dice {
+        -webkit-animation: none;
+        animation: none; } }
+  header .wrapper .instructionsMenuIcon {
     display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.9); }
+    font-size: 1.6rem;
+    padding: 0 5px;
+    border: none;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    background: none;
+    -webkit-transition: color 0.5s ease-out;
+    -o-transition: color 0.5s ease-out;
+    transition: color 0.5s ease-out;
+    z-index: 20;
+    -webkit-animation: pulse;
+    animation: pulse;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-delay: 5s;
+    animation-delay: 5s; }
+    @media (prefers-reduced-motion: reduce) {
+      header .wrapper .instructionsMenuIcon {
+        -webkit-animation: none;
+        animation: none; } }
+    header .wrapper .instructionsMenuIcon:hover {
+      color: #FFFFFF; }
+      @media (max-width: 500px) {
+        header .wrapper .instructionsMenuIcon:hover {
+          color: initial; } }
+  header .wrapper .fa-times {
+    color: #FFFFFF;
+    -webkit-transition: color 0.3s ease-out;
+    -o-transition: color 0.3s ease-out;
+    transition: color 0.3s ease-out;
+    padding: 3px; }
+    header .wrapper .fa-times:hover {
+      color: #690500; }
+      @media (max-width: 500px) {
+        header .wrapper .fa-times:hover {
+          color: #FFFFFF; } }
+    @media (max-width: 1280px) {
+      header .wrapper .fa-times {
+        margin-right: 15px; } }
+    @media (max-width: 525px) {
+      header .wrapper .fa-times {
+        margin-right: 0; } }
+
+header .instructionsMenu {
+  display: none;
+  color: #FFFFFF;
+  padding: 0 15%; }
+  header .instructionsMenu h2 {
+    text-align: center;
+    font-size: 2.1rem; }
+    @media (max-width: 605px) {
+      header .instructionsMenu h2 {
+        font-size: 1.8rem; } }
+    @media (max-width: 420px) {
+      header .instructionsMenu h2 {
+        font-size: 1.4rem; } }
+  header .instructionsMenu .steps {
+    margin-top: 50px; }
+    @media (max-width: 570px) {
+      header .instructionsMenu .steps {
+        margin-top: 25px; } }
+  header .instructionsMenu .steps p {
+    text-align: left;
+    font-size: 1.1rem;
+    margin-top: 0; }
+    @media (max-width: 690px) {
+      header .instructionsMenu .steps p {
+        font-size: 0.9rem; } }
+    @media (max-width: 420px) {
+      header .instructionsMenu .steps p {
+        font-size: 0.8rem; } }
+    @media (max-width: 330px) {
+      header .instructionsMenu .steps p {
+        font-size: 0.7rem; } }
+    header .instructionsMenu .steps p:first-letter {
+      text-transform: capitalize; }
+
+header .showInstructionsMenu {
+  z-index: 10;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.9); }
 
 main .diceGrid {
   min-height: 360px;
@@ -276,7 +307,11 @@ main .diceGrid {
   margin: 0 15%;
   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
   -ms-grid-rows: auto;
-  grid-template-rows: auto; }
+  grid-template-rows: auto;
+  grid-gap: 2%; }
+  @media (max-width: 592px) {
+    main .diceGrid {
+      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr)); } }
 
 main .dice {
   border: 1px solid #070707;
@@ -289,10 +324,10 @@ main .dice {
     main .dice {
       width: 100px;
       height: 100px; } }
-  @media (max-width: 480px) {
+  @media (max-width: 592px) {
     main .dice {
-      width: 90px;
-      height: 90px; } }
+      width: 75px;
+      height: 75px; } }
 
 main .dot1,
 main .dot2,
@@ -314,7 +349,7 @@ main .dot6 {
     main .dot6 {
       width: 20px;
       height: 20px; } }
-  @media (max-width: 480px) {
+  @media (max-width: 592px) {
     main .dot1,
     main .dot2,
     main .dot3,
@@ -496,7 +531,9 @@ main .playButtons {
   grid-gap: 1%; }
   @media (max-width: 470px) {
     main .playButtons {
-      grid-gap: 5%; } }
+      grid-gap: 5%;
+      grid-auto-rows: 60px;
+      padding-bottom: 10px; } }
   main .playButtons .rollNewDice,
   main .playButtons .stay {
     text-transform: uppercase;
@@ -515,12 +552,23 @@ main .playButtons {
       main .playButtons .rollNewDice,
       main .playButtons .stay {
         font-size: 1rem; } }
+    @media (max-width: 470px) {
+      main .playButtons .rollNewDice,
+      main .playButtons .stay {
+        font-size: 0.9rem; } }
     main .playButtons .rollNewDice:hover,
     main .playButtons .stay:hover {
       -webkit-box-shadow: 0 5px 5px #070707;
       box-shadow: 0 5px 5px #070707;
       text-shadow: 1px 1px 1px #FFFFFF;
       color: #690500; }
+      @media (max-width: 500px) {
+        main .playButtons .rollNewDice:hover,
+        main .playButtons .stay:hover {
+          color: #FFFFFF;
+          -webkit-box-shadow: none;
+          box-shadow: none;
+          text-shadow: none; } }
   main .playButtons .rollNewDice {
     -ms-grid-column: 4;
     -ms-grid-column-span: 3;
@@ -545,13 +593,11 @@ main .playButtons {
         -ms-grid-column: 4;
         -ms-grid-column-span: 6;
         grid-column: 4 / span 6; } }
-    @media (max-width: 338px) {
-      main .playButtons .rollNewDice {
-        -ms-grid-column: 3;
-        -ms-grid-column-span: 8;
-        grid-column: 3 / span 8; } }
     main .playButtons .rollNewDice:hover {
       cursor: url(../assets/diceCursor.png), auto; }
+      @media (max-width: 500px) {
+        main .playButtons .rollNewDice:hover {
+          cursor: pointer; } }
   main .playButtons .stay {
     -ms-grid-column: 7;
     -ms-grid-column-span: 3;
@@ -571,11 +617,6 @@ main .playButtons {
         -ms-grid-column: 4;
         -ms-grid-column-span: 6;
         grid-column: 4 / span 6; } }
-    @media (max-width: 338px) {
-      main .playButtons .stay {
-        -ms-grid-column: 3;
-        -ms-grid-column-span: 8;
-        grid-column: 3 / span 8; } }
 
 main .userScoreIndicator {
   min-height: 80px; }
